baml_language/crates/baml_tests/snapshots/diagnostic_errors/parser_constructors/baml_tests__diagnostic_errors__parser_constructors__01_lexer__array_constructor.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Class "class"
Word "Point"
LBrace "{"
Word "x"
Word "int"
Word "y"
Word "int"
RBrace "}"
Function "function"
Word "stringArray"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Quote "\""
Word "hello"
Quote "\""
Comma ","
Quote "\""
Word "world"
Quote "\""
Comma ","
Quote "\""
Test "test"
Quote "\""
RBracket "]"
RBrace "}"
Function "function"
Word "intArray"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
IntegerLiteral "1"
Comma ","
IntegerLiteral "2"
Comma ","
IntegerLiteral "3"
RBracket "]"
RBrace "}"
Function "function"
Word "floatArray"
LParen "("
RParen ")"
Arrow "->"
Word "float"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
FloatLiteral "1.0"
Comma ","
FloatLiteral "2.0"
Comma ","
FloatLiteral "3.0"
RBracket "]"
RBrace "}"
Function "function"
Word "boolArray"
LParen "("
RParen ")"
Arrow "->"
Word "bool"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Word "true"
Comma ","
Word "false"
Comma ","
Word "true"
RBracket "]"
RBrace "}"
Function "function"
Word "pointArray"
LParen "("
RParen ")"
Arrow "->"
Word "Point"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Word "Point"
LBrace "{"
Word "x"
Colon ":"
IntegerLiteral "1"
Comma ","
Word "y"
Colon ":"
IntegerLiteral "2"
RBrace "}"
Comma ","
Word "Point"
LBrace "{"
Word "x"
Colon ":"
IntegerLiteral "3"
Comma ","
Word "y"
Colon ":"
IntegerLiteral "4"
RBrace "}"
Comma ","
Word "Point"
LBrace "{"
Word "x"
Colon ":"
IntegerLiteral "5"
Comma ","
Word "y"
Colon ":"
IntegerLiteral "6"
RBrace "}"
RBracket "]"
RBrace "}"
Slash "/"
Slash "/"
Word "Heterogeneous"
Word "array"
Minus "-"
Word "array"
Word "of"
Word "union"
Word "type"
Function "function"
Word "mixedArray"
LParen "("
RParen ")"
Arrow "->"
LParen "("
Word "int"
Pipe "|"
Word "string"
RParen ")"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
IntegerLiteral "1"
Comma ","
Quote "\""
Word "two"
Quote "\""
Comma ","
IntegerLiteral "3"
RBracket "]"
RBrace "}"
