baml_language/crates/baml_tests/snapshots/diagnostic_errors/parser_constructors/baml_tests__diagnostic_errors__parser_constructors__01_lexer__map_constructor.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Function "function"
Word "stringValues"
LParen "("
RParen ")"
Arrow "->"
Word "map"
Less "<"
Word "string"
Comma ","
Word "string"
Greater ">"
LBrace "{"
LBrace "{"
Quote "\""
Word "hello"
Quote "\""
Colon ":"
Quote "\""
Word "world"
Quote "\""
Comma ","
Quote "\""
Test "test"
Quote "\""
Colon ":"
Quote "\""
Test "test"
Quote "\""
RBrace "}"
RBrace "}"
Function "function"
Word "intValues"
LParen "("
RParen ")"
Arrow "->"
Word "map"
Less "<"
Word "string"
Comma ","
Word "int"
Greater ">"
LBrace "{"
LBrace "{"
Quote "\""
Word "hello"
Quote "\""
Colon ":"
IntegerLiteral "1"
Comma ","
Quote "\""
Test "test"
Quote "\""
Colon ":"
IntegerLiteral "2"
RBrace "}"
RBrace "}"
Function "function"
Word "floatValues"
LParen "("
RParen ")"
Arrow "->"
Word "map"
Less "<"
Word "string"
Comma ","
Word "float"
Greater ">"
LBrace "{"
LBrace "{"
Quote "\""
Word "hello"
Quote "\""
Colon ":"
FloatLiteral "1.0"
Comma ","
Quote "\""
Test "test"
Quote "\""
Colon ":"
FloatLiteral "2.0"
RBrace "}"
RBrace "}"
Function "function"
Word "boolValues"
LParen "("
RParen ")"
Arrow "->"
Word "map"
Less "<"
Word "string"
Comma ","
Word "bool"
Greater ">"
LBrace "{"
LBrace "{"
Quote "\""
Word "hello"
Quote "\""
Colon ":"
Word "true"
Comma ","
Quote "\""
Test "test"
Quote "\""
Colon ":"
Word "false"
RBrace "}"
RBrace "}"
